final-theme-second

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,8 @@
 /**
-* Template Name: Scaffold - v2.0.0
-* Template URL: https://bootstrapmade.com/scaffold-bootstrap-metro-style-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
+ * Template Name: FirstInc
+ * Author: Ajeet Kumar
+ * Author URL: https://intelletree.com/
+ */
 
 /*--------------------------------------------------------------
 # General
