--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1056,11 +1056,17 @@ section {
   background: #fff;
   text-align: center;
   border-radius: 4px;
+  max-height: 140px;
   position: relative;
   overflow: hidden;
   border: 2px solid #e9ecee;
   transition:all 0.3s ease-in-out 0s;
 }
+
+.pricing .box:hover{
+  max-height: 100%;
+}
+
 
 .pricing .box i {
   font-size: 50px;
