--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1067,6 +1067,15 @@ section {
   max-height: 100%;
 }
 
+@media(max-width:1199px){
+  .pricing .box {
+    max-height: 100%;
+  }
+  .pricing .box:hover{
+    max-height: 100%;
+  }
+}
+
 
 .pricing .box i {
   font-size: 50px;
@@ -1826,12 +1835,32 @@ section {
   background: transparent;
   border: 0;
 }
+.reg__section .nav-link{
+  border: 0;
+}
 .reg__section .nav-link.active{
-  border-color: #e9ecef #e9ecef #dee2e6;
+ background:#009cea;
+ border: 0;
+ color: #fff;
+ border-radius: 0;
+ transition: all 0.3s ease-in-out;
 }
-.reg__section .nav-link i{
-color:red;
+
+.reg__section .nav-link:focus, .reg__section .nav-link:hover {
+  border: 0;
 }
-.reg__section .nav-link.active i{
- color: #009cea;
+.nav-tabs .nav-item {
+  margin-bottom: 5px;
 }
+/* .reg__section .nav-link.active{
+  background: #f7f8f9;
+  border: 0;
+  border-bottom: 1px solid red;
+} */
+
+/* .reg__section .nav-link i{
+color: red;
+} */
+/* .reg__section .nav-link.active i{
+ color: #fff;
+} */
